--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -132,7 +132,7 @@
                         <tr>
                             <th>Timestamp</th>
                             <th>Station</th>
-                            <th>Temp (°C)</th>
+                            <th>Temp (°F)</th>
                             <th>Humidity (%)</th>
                             <th>Pressure (hPa)</th>
                             <th>Wind (km/h)</th>
